PR c++/90243 - orphaned note in uninstantiated constexpr function

gcc/cp:

	PR c++/90243 - orphaned note in uninstantiated constexpr function
	* decl.c (check_for_uninitialized_const_var): Suppress notes if no
	error was shown.

gcc/testsuite:

	PR c++/90243
	* g++.dg/diagnostic/pr90243.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@270610 138bc75d-0d04-0410-961f-82ee72b054a4